versions/0.10.0/_sources/refs/_aws-cdk_aws-autoscalingplans.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"CyVBm0MUzHriYFUZjo1/8FXh24Qa/2jWIw9iFAGEuKs="}

@aws-cdk/aws-autoscalingplans
=============================

.. mdinclude:: ./__aws-cdk_aws-autoscalingplans.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AutoScalingPlans/0.10.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AutoScalingPlans" Version="0.10.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AutoScalingPlans --version 0.10.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AutoScalingPlans" version="0.10.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/autoscalingplans/0.10.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:autoscalingplans:jar:0.10.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="autoscalingplans" rev="0.10.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>autoscalingplans</artifactId>
           <version>0.10.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:autoscalingplans:0.10.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='autoscalingplans', version='0.10.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.10.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.10.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.10.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.10.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.10.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.10.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.10.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.10.0



.. py:module:: @aws-cdk/aws-autoscalingplans


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-autoscalingplans.cloudformation

ScalingPlanResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPlanResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource;

      .. code-tab:: javascript

         const { cloudformation.ScalingPlanResource } = require('@aws-cdk/aws-autoscalingplans');

      .. code-tab:: typescript

         import { cloudformation.ScalingPlanResource } from '@aws-cdk/aws-autoscalingplans';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param parent: the ``cdk.Construct`` this ``ScalingPlanResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScalingPlanResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResourceProps`\ 

   .. py:method:: renderProperties([properties]) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any or ``undefined``
      :rtype: string => (any or ``undefined``)


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResourceProps`\  *(readonly)*


   .. py:attribute:: scalingPlanArn

      :type: string *(readonly)*

   .. py:class:: ApplicationSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.ApplicationSourceProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.ApplicationSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.ApplicationSourceProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: cloudFormationStackArn

         ``ScalingPlanResource.ApplicationSourceProperty.CloudFormationStackARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-cloudformationstackarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*


      .. py:attribute:: tagFilters

         ``ScalingPlanResource.ApplicationSourceProperty.TagFilters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-tagfilters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or (:py:class:`@aws-cdk/cdk.CloudFormationToken`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.TagFilterProperty`\ )[] or ``undefined`` *(abstract)*


   .. py:class:: CustomizedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: metricName

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.MetricName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-metricname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: namespace

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-namespace


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: statistic

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Statistic``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-statistic


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: dimensions

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Dimensions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or (:py:class:`@aws-cdk/cdk.CloudFormationToken`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.MetricDimensionProperty`\ )[] or ``undefined`` *(abstract)*


      .. py:attribute:: unit

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Unit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-unit


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*


   .. py:class:: MetricDimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.MetricDimensionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.MetricDimensionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.MetricDimensionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: name

         ``ScalingPlanResource.MetricDimensionProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: value

         ``ScalingPlanResource.MetricDimensionProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


   .. py:class:: PredefinedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: predefinedScalingMetricType

         ``ScalingPlanResource.PredefinedScalingMetricSpecificationProperty.PredefinedScalingMetricType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-predefinedscalingmetrictype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: resourceLabel

         ``ScalingPlanResource.PredefinedScalingMetricSpecificationProperty.ResourceLabel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-resourcelabel


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*


   .. py:class:: ScalingInstructionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.ScalingInstructionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.ScalingInstructionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.ScalingInstructionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: maxCapacity

         ``ScalingPlanResource.ScalingInstructionProperty.MaxCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-maxcapacity


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: minCapacity

         ``ScalingPlanResource.ScalingInstructionProperty.MinCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-mincapacity


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: resourceId

         ``ScalingPlanResource.ScalingInstructionProperty.ResourceId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-resourceid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: scalableDimension

         ``ScalingPlanResource.ScalingInstructionProperty.ScalableDimension``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-scalabledimension


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: serviceNamespace

         ``ScalingPlanResource.ScalingInstructionProperty.ServiceNamespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-servicenamespace


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: targetTrackingConfigurations

         ``ScalingPlanResource.ScalingInstructionProperty.TargetTrackingConfigurations``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-targettrackingconfigurations


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or (:py:class:`@aws-cdk/cdk.CloudFormationToken`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty`\ )[] *(abstract)*


   .. py:class:: TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.TagFilterProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.TagFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.TagFilterProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: key

         ``ScalingPlanResource.TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: values

         ``ScalingPlanResource.TagFilterProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-values


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`\ )[] or ``undefined`` *(abstract)*


   .. py:class:: TargetTrackingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: targetValue

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.TargetValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-targetvalue


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


      .. py:attribute:: customizedScalingMetricSpecification

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.CustomizedScalingMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-customizedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty`\  or ``undefined`` *(abstract)*


      .. py:attribute:: disableScaleIn

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.DisableScaleIn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-disablescalein


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*


      .. py:attribute:: estimatedInstanceWarmup

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.EstimatedInstanceWarmup``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-estimatedinstancewarmup


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*


      .. py:attribute:: predefinedScalingMetricSpecification

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.PredefinedScalingMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-predefinedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty`\  or ``undefined`` *(abstract)*


      .. py:attribute:: scaleInCooldown

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.ScaleInCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleincooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*


      .. py:attribute:: scaleOutCooldown

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.ScaleOutCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleoutcooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or ``undefined`` *(abstract)*



   .. py:method:: addChild(child, childName)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addChild>`

      Adds a child construct to this node.


      *Protected method*

      :param child: The child construct
      :type child: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param childName: 
      :type childName: string
      :return: The resolved path part name of the child


   .. py:method:: addError(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addError>`

      Adds an { error: <message> } metadata entry to this construct. The toolkit will fail synthesis when errors are reported.


      :param message: The error message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addInfo(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addInfo>`

      Adds a { "aws:cdk:info": <message> } metadata entry to this construct. The toolkit will display the info message when apps are synthesized.


      :param message: The info message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addMetadata(type, [data, [from]]) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addMetadata>`

      Adds a metadata entry to this construct. Entries are arbitrary values and will also include a stack trace to allow tracing back to the code location for when the entry was added. It can be used, for example, to include source mapping in CloudFormation templates to improve diagnostics.


      :param type: a string denoting the type of metadata
      :type type: string
      :param data: the value of the metadata (can be a Token). If null/undefined, metadata will not be added.
      :type data: any or ``undefined``
      :param from: a function under which to restrict the metadata entry's stack trace (defaults to this.addMetadata)
      :type from: any or ``undefined``
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addWarning(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addWarning>`

      Adds a { warning: <message> } metadata entry to this construct. The toolkit will display the warning when an app is synthesized, or fail if run in --strict mode.


      :param message: The warning message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: ancestors([upTo]) -> @aws-cdk/cdk.Construct[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.ancestors>`

      Return the ancestors (including self) of this Construct up until and excluding the indicated component


      :param upTo: 
      :type upTo: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined``
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ []


   .. py:method:: findChild(path) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.findChild>`

      Return a descendant by path  Throws an exception if the descendant is not found.


      :param path: 
      :type path: string
      :return: Child with the given path.
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: getContext(key) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.getContext>`

      Retrieves a value from tree context.  Context is usually initialized at the root, but can be overridden at any point in the tree.


      :param key: The context key
      :type key: string
      :return: The context value or undefined
      :rtype: any or ``undefined``


   .. py:method:: lock()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.lock>`

      Locks this construct from allowing more children to be added. After this call, no more children can be added to this construct or to any children.


      *Protected method*



   .. py:method:: requireContext(key) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.requireContext>`

      Retrieve a value from tree-global context  It is an error if the context object is not available.


      :param key: 
      :type key: string
      :rtype: any or ``undefined``


   .. py:method:: required(props, name) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.required>`

      Throws if the `props` bag doesn't include the property `name`. In the future we can add some type-checking here, maybe even auto-generate during compilation.


      *Protected method*

      :param props: The props bag.
      :type props: any or ``undefined``
      :param name: The name of the required property.
      :type name: string
      :rtype: any or ``undefined``


   .. py:method:: setContext(key, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.setContext>`

      This can be used to set contextual values. Context must be set before any children are added, since children may consult context info during construction. If the key already exists, it will be overridden.


      :param key: The context key
      :type key: string
      :param value: The context value
      :type value: any or ``undefined``


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.


      :rtype: string


   .. py:method:: toTreeString([depth]) -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toTreeString>`

      Returns a string with a tree representation of this construct and it's children.


      :param depth: 
      :type depth: number or ``undefined``
      :rtype: string


   .. py:method:: tryFindChild(path) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.tryFindChild>`

      Return a descendant by path, or undefined


      :param path: 
      :type path: string
      :return: a child by path or undefined if not found.
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined``


   .. py:method:: unlock()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.unlock>`

      Unlocks this costruct and allows mutations (adding children).


      *Protected method*



   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      This method can be implemented by derived constructs in order to perform validation logic. It is called on all constructs before synthesis.


      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:method:: validateTree() -> @aws-cdk/cdk.ValidationError[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validateTree>`

      Invokes 'validate' on all child constructs and then on this construct (depth-first).


      :return: A list of validation errors. If the list is empty, all constructs are valid.
      :rtype: :py:class:`@aws-cdk/cdk.ValidationError`\ []


   .. py:attribute:: children

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.children>`

      All direct children of this construct.


      :type: :py:class:`@aws-cdk/cdk.Construct`\ [] *(readonly)*


   .. py:attribute:: id

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.id>`

      The local id of the construct. This id is unique amongst its siblings. To obtain a tree-global unique id for this construct, use `uniqueId`.


      :type: string *(readonly)*


   .. py:attribute:: locked

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.locked>`

      Returns true if this construct or any of it's parent constructs are locked.


      *Protected property*

      :type: boolean *(readonly)*


   .. py:attribute:: metadata

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.metadata>`

      An array of metadata objects associated with this construct. This can be used, for example, to implement support for deprecation notices, source mapping, etc.


      :type: :py:class:`@aws-cdk/cdk.MetadataEntry`\ [] *(readonly)*


   .. py:attribute:: path

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.path>`

      The full path of this construct in the tree. Components are separated by '/'.


      :type: string *(readonly)*


   .. py:attribute:: uniqueId

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.uniqueId>`

      A tree-global unique alphanumeric identifier for this construct. Includes all components of the tree.


      :type: string *(readonly)*


   .. py:attribute:: parent

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.parent>`

      Returns the parent of this node or undefined if this is a root node.


      :type: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined`` *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.


      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.


      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.


      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a property override, either use `addPropertyOverride` or prefix `path` with "Properties." (i.e. `Properties.TopicName`).


      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any or ``undefined``


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.


      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.  Syntactic sugar for `addOverride("Properties.<...>", value)`.


      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any or ``undefined``


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CloudFormationToken

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource. Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility in case there is no generated attribute.


      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CloudFormationToken`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.


      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.


      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.


      :type: string *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.  This object is rendered via a call to "renderProperties(this.properties)".


      *Protected property*

      :type: any or ``undefined`` *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.  During synthesis, the method "renderProperties(this.overrides)" is called with this object, and merged on top of the output of "renderProperties(this.properties)".  Derived classes should expose a strongly-typed version of this object as a public property called `propertyOverrides`.


      *Protected property*

      :type: any or ``undefined`` *(readonly)*


   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions) that should be added when a resource "depends on" this construct.


      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element


      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack


      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of


      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


ScalingPlanResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPlanResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResourceProps;

      .. code-tab:: javascript

         // cloudformation.ScalingPlanResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ScalingPlanResourceProps } from '@aws-cdk/aws-autoscalingplans';





   .. py:attribute:: applicationSource

      ``AWS::AutoScalingPlans::ScalingPlan.ApplicationSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-applicationsource


      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.ApplicationSourceProperty`\  or :py:class:`@aws-cdk/cdk.CloudFormationToken`\  *(abstract)*


   .. py:attribute:: scalingInstructions

      ``AWS::AutoScalingPlans::ScalingPlan.ScalingInstructions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-scalinginstructions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken`\  or (:py:class:`@aws-cdk/cdk.CloudFormationToken`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.ScalingInstructionProperty`\ )[] *(abstract)*



.. py:currentmodule:: @aws-cdk/aws-autoscalingplans

